now starting the frontend
