# openapi.yml
@@ -43,10 +43,10 @@ paths:
           description: Invalid Request
         409:
           description: Account Already Exists
-  /accounts/{userid}:
+  /accounts/{username}:
     x-controller: accounts
     parameters:
-      - $ref: '#/components/parameters/PathUserId'
+      - $ref: '#/components/parameters/PathUsername'
     get:
       x-operation: getAccount
       tags:
@@ -67,6 +67,8 @@ paths:
       x-operation: updateAccount
       tags:
         - Accounts
+      security:
+        - cookieAuth: []
       summary: Update an account
       requestBody:
         content:
@@ -103,6 +105,8 @@ paths:
       x-operation: deleteAccount
       tags:
         - Accounts
+      security:
+        - cookieAuth: []
       summary: Delete an account
       responses:
         204:
@@ -111,14 +115,12 @@ paths:
           description: Not authenticated
         403:
           description: Also not authenticated
-  /accounts/{userid}/login:
-    x-controller: accounts
-    parameters:
-      - $ref: '#/components/parameters/PathUserId'
+  /authentication/login:
+    x-controller: authentication
     put:
       x-operation: login
       tags: 
-        - Accounts
+        - Authentication
       summary: loggs a user in
       requestBody:
         required: true
@@ -132,7 +134,6 @@ paths:
               properties:
                 username:
                   type: string
-                  format: username
                 password: 
                   type: string
                   format: password
@@ -142,22 +143,18 @@ paths:
       responses: 
         200:
           description: logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Account'
         400:
           description: invalid request
         403:
           description: access denied
-  /accounts/{userid}/logout:
-    x-controller: accounts
-    parameters:
-      - $ref: '#/components/parameters/PathUserId'
+  /authentication/logout:
+    x-controller: authentication
     put:
       x-operation: logout
       tags: 
-        - Accounts
+        - Authentication
+      security:
+        - cookieAuth: []
       summary: loggs a user out
       responses: 
         200:
@@ -170,6 +167,8 @@ paths:
       x-operation: createPuzzle
       tags:
         - Puzzles
+      security:
+        - cookieAuth: []
       summary: Create a Puzzle
       parameters:
         - name: completed
@@ -210,6 +209,8 @@ paths:
       x-operation: deletePuzzle
       tags:
         - Puzzles
+      security:
+        - cookieAuth: []
       summary: Delete a puzzle
       responses:
         204:
@@ -224,6 +225,8 @@ paths:
       x-operation: getPuzzle
       tags:
         - Puzzels
+      security:
+        - cookieAuth: []
       summary: Get a puzzle
       responses:
         200:
@@ -247,6 +250,8 @@ paths:
       x-operation: updatePuzzle
       tags:
         - Numbers
+      security:
+        - cookieAuth: []
       summary: Number is changed
       requestBody:
         required: true
@@ -277,6 +282,8 @@ paths:
       x-operation: getNumber
       tags:
         - Numbers
+      security:
+        - cookieAuth: []
       summary: Get a number
       responses:
         200:
@@ -293,8 +300,8 @@ paths:
           description: not found
 components:
   parameters:
-    PathUserId:
-      name: userid
+    PathUsername:
+      name: username
       in: path
       required: true
       schema:
@@ -311,6 +318,11 @@ components:
       required: true
       schema:
         type: string
+  securitySchemes:
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: sudokuSessionId
   schemas:
     Account:
       type: object
